# fbnotes

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  README_PRODUCTION.md  docker-compose.prod.yml  docker-compose.yml  migrations_placeholder.txt  prod_settings_snippet.txt  requirements.txt  structure.txt
audit/: admin.py  (+1 more)
project/: .env.production  .render.yaml  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  urls.py
project/apps/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
project/apps/accounts/migrations/: 0001_initial.py  0002_user_profile_photo.py
project/apps/activity/: models.py  serializers.py
project/apps/activity/migrations/: 0001_initial.py
project/apps/analytics/: urls.py  views.py
project/apps/announcements/: models.py  serializers.py  urls.py  views.py
project/apps/announcements/migrations/: 0001_initial.py
project/apps/audit/: admin.py  models.py  serializers.py  urls.py  views.py
project/apps/audit/migrations/: 0001_initial.py
project/apps/bookmarks/: admin.py  apps.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
project/apps/bookmarks/migrations/: 0001_initial.py  (+1 more)
project/apps/categories/: models.py  serializers.py  views.py
project/apps/notes/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
project/apps/pages/: models.py  urls.py  views.py
project/apps/tags/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
project/project/: settings.py  urls.py
(+49 files in other folders)
